--- a/react-client/client/src/index.css
+++ b/react-client/client/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+*{
+  margin: 0;
+  padding: 0;
+}
+body{
+  background: #0a0a0a;
+}
