added login and register handle

--- a/react-client/client/src/components/Form.css
+++ b/react-client/client/src/components/Form.css
@@ -24,3 +24,13 @@ button{
     padding: 5px 10px;
     display: inline;
 }
+label{
+    color: #ffffff;
+    margin-right: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.labels{
+    display: flex;
+}
